# engramkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: engramkit-precompact.sh  engramkit-session-start.sh
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
benchmarks/: compare_mempalace.py  convomem_bench.py
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/lib/: api.ts  types.ts
dashboard/src/views/: chat.tsx  chunk-detail.tsx  chunks.tsx  dashboard.tsx  files.tsx  gc.tsx  kg.tsx  mine.tsx  search.tsx  settings.tsx  vault-detail.tsx  vaults.tsx
engramkit/: __init__.py  __main__.py  cli.py  config.py
engramkit/api/: chat_tools.py  helpers.py  routes_chat.py  routes_kg.py  routes_memory.py  routes_search.py  routes_vaults.py  server.py
engramkit/dashboard_static/: 404.html  __next.$oc$slug.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
engramkit/dashboard_static/_not-found/: __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.txt
engramkit/dashboard_static/chat/: __next._full.txt  __next._tree.txt  index.html
engramkit/graph/: knowledge_graph.py
engramkit/hooks/: claude_hook_handler.py  claude_hooks.sh  git_hooks.py  hook_manager.py
engramkit/ingest/: chunker.py  git_differ.py  pipeline.py  secret_scanner.py
engramkit/mcp/: server.py
engramkit/memory/: layers.py  token_budget.py
engramkit/search/: fts.py  hybrid.py
engramkit/storage/: chromadb_backend.py  gc.py  schema.py  vault.py
examples/: 01_quickstart.py  02_hybrid_search.py  03_knowledge_graph.py  04_gc_lifecycle.py  05_memory_layers.py  06_mcp_setup.md  07_secret_scanning.py  08_content_hooks.py  README.md
hooks/: engramkit-stop.sh  hooks.json
scripts/: build-dashboard.sh  sync-version.py
tests/: conftest.py  test_api.py  test_chromadb_backend.py  test_chunker.py  test_config.py  test_fts.py  test_gc.py  test_git_differ.py  test_hooks.py  test_hybrid_search.py  test_knowledge_graph.py  test_layers.py  test_mcp.py  test_mcp_server.py  test_pipeline.py  test_schema.py  test_search.py  test_secret_scanner.py  test_token_budget.py  test_vault.py
(+49 files in other folders)
